add logo & make chatbot
